--- a/sections/achievements.tex
+++ b/sections/achievements.tex
@@ -2,26 +2,20 @@
 
 \resumeSubHeadingListStart
     \resumeSubheading
-        {Idea2Startup Fund Awardee}{Dec 2024}
-        {City of Naga}{Camarines Sur}
+        {Idea2Startup Fund Awardee -- Project STUBU.AI}{Dec 2024}
+        {Local Government Unit (LGU) City of Naga}{Naga City, Camarines Sur}
         \resumeItemListStart
-            \resumeItem{Pitched the application STUBU.AI, an adaptive study-buddy web application designed to help learners study with a personalized learning environment. Pitched the application to the Local Government Unit (LGU) of Naga City for the Idea2Startup program.} 
-            \resumeItem{Placed among one of the final list of qualifying startups, securing a grant totaling 53,874.36 Php earmarked for the testing and deployment phases of the website.}
+            \resumeItem{Pitched and placed among one of the final list of qualifying startups, securing a grant totaling 53,874.36 Php earmarked for the testing and deployment phases of the website.}
         \resumeItemListEnd
         % ------------------------------------------------------------------------------------------ %
         \resumeSubheading
-        {JPCIS ITalks: Ethical Hacking}{Oct 2024}
-        {Divine World College of Calapan}{Philippines}
-        % ------------------------------------------------------------------------------------------ %
-        \resumeSubheading
         {AppCon2023 Development Contest Certificate of Participation}{Jun 2024}
-        {OTIS Japan Inc.}{Philippines}
+        {OTIS Japan Inc.}{Naga City, Camarines Sur}
         % ------------------------------------------------------------------------------------------ %
         \resumeSubheading
         {Freshmen Computer Programming Competition Certificate of Achievement}{Dec 2021}
-        {Ateneo de Naga University}{Camarines Sur}
+        {Ateneo de Naga University}{Naga City, Camarines Sur}
         \resumeItemListStart
-            \resumeItem{18th Place among 97 freshmen participants.}
-            \resumeItem{Thrived in a high-pressure environment, solving intricate problems within strict timeframes.}
+            \resumeItem{18th Place among 97 freshmen participants. Thrived in a high-pressure environment, solving intricate problems within strict timeframes.}
         \resumeItemListEnd
 \resumeSubHeadingListEnd
