--- a/sections/certification.tex
+++ b/sections/certification.tex
@@ -3,11 +3,11 @@
 \resumeSubHeadingListStart
     \resumeSubheading
     {Level 1 Certified Data Center Technician (CDCT)}{Aug 2024}
-    {East West Int'l Education Specialist (EWIES), E-PLDT Vitro}{Camarines Sur}
+    {East West Int'l Education Specialist (EWIES), E-PLDT Vitro}{Naga City, Camarines Sur}
     \resumeSubheading
     {Smartbooks and Power BI Certificate of Completion}{Jun 2024}
-    {Ateneo de Naga University}{Camarines Sur}
+    {Ateneo de Naga University}{Naga City, Camarines Sur}
     \resumeSubheading
     {SAP Business One DBMS for IT Certificate of Completion}{Oct 2022}
-    {Ateneo de Naga University}{Camarines Sur}
+    {Ateneo de Naga University}{Naga City, Camarines Sur}
 \resumeSubHeadingListEnd
