--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -3,45 +3,29 @@
 \resumeSubHeadingListStart
     \resumeSubheading
     {Ateneo de Naga University -- Project HRIS \& ADNUONE (Phase 1 and 2)}{Jun 2024 -- Present}
-    {Contract • Lead Full-Stack Web Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    {Contract • Lead Application \& Backend Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
     \resumeItemListStart
-        \resumeItem{Lead developer for HRIS: a new web portal for Ateneo de Naga University's HRMO. Handled confidential access to HR records from the University's database with careful measures in place.}
-        \resumeItem{Developed key modules of the application ranging from reports, management, design, data processing/analysis, and hardware configuration resulting in a drastic improvement to the HR's workflow in terms of eliminating the manual processes.}
-        \resumeItem{Designed the database schema in Oracle using ERD and optimized data rendering and fetching of employee records on thousands of records by usage of optimized PL/SQL queries, views, procedures, indexing, functions, server-side implementations, batch processing and client-side rendering.}
-        \resumeItem{Crafted and applied a data migration plan to perform a large-scale migration of up to 3,000,000+ records from MySQL and Postgres to Oracle with 99.82\% success rate, resulting in unified data records of HRMO in the main database of the University.}
-        \resumeItem{Enforced clean architecture to the project with advanced OOP concepts. Wrote clear technical and project documentation, i.e., ERD, user manual, gantt chart,  swimlane, data dictionary, and code documentation.}
-        \resumeItem{Conducted a comprehensive testing phase, prototyping, and feedback to HRMO, and facilitated onboarding for HR officers to ensure smooth adoption and operational efficiency. Presented the data migration results to HRMO for future decision-making.}
+        \resumeItem{Designed the conceptual database schema in Oracle using ERD and optimized data rendering of thousands of records by PL/SQL queries, views, procedures, indexing, functions, SSR and CSR.}
+        \resumeItem{Crafted and applied a data migration plan to perform a \textbf{large-scale migration of up to 3,000,000+ records} from MySQL and Postgres to Oracle with a \textbf{99.82\% success rate}, resulting in unified data records.}
+        \resumeItem{Enforced clean architecture to the project with advanced OOP concepts. Wrote clear technical and project documentation, i.e., ERD, user manual, Gantt chart,  swimlane, data dictionary, and code documentation.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ateneo de Naga University -- Project RETSU}{Jan 2024 -- Mar 2024}
-    {Contract • Lead Full-Stack Web Developer  (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    {Contract • Lead Application Developer  (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Developed a queue management system solution for the University, which enhanced the user experience by reducing queue delays and eliminating the inconveniences associated with traditional queuing systems in AdNU.}
-        \resumeItem{Integrated a online queueing for students with QR access, and a real-time queue status view for clients, with customizable controls through admin management.}
-        \resumeItem{Optimized front-end, back-end, and database by improving SQL queries and data handling, increasing system efficiency by 84\% and enabling seamless page loads with 26,000+ transactions per branch.}
-        \resumeItem{Developed the system within a stringent two-month development and deployment timeframe, followed by a five-month maintenance period, while adhering to strict deadlines and managing time-sensitive pressures.}
-        \resumeItem{Conducted a comprehensive testing phase, prototyping, and feedback, and facilitated onboarding for clients to ensure smooth adoption and operational efficiency.}
-    \resumeItemListEnd
-    % ------------------------------------------------------------------------------------------ %
-    % 
-    \resumeSubheading
-    {Ateneo de Naga University -- Management Information System Intern}{Aug 2023 -- Present}
-    {Internship • Junior Application Developer (System Design and Development)}{Naga City, Camarines Sur}
-    \resumeItemListStart
-        \resumeItem{Developed and contributed through system development for the web applications in the University.}
-        \resumeItem{Communicated with key stakeholders per project and developed web system design for the database schemas under Oracle and created UI/UX design.}
+        \resumeItem{Integrated online queueing for students with QR access and a real-time queue status view for clients with customizable controls through admin management.}
+        \resumeItem{Solved complex real-time bugs and optimized frontend, backend, and database by improving SQL queries and data handling, increasing system efficiency by 84\%, enabling seamless page loads with \textbf{26,000+} transactions per branch.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Department of Agriculture -- Project DAAMIA}{Sep 2022 -- Oct 2023}
-    {Subcontract • Lead Full-Stack Web Developer (C\#, .NET Framework, MSSQL)}{Naga City, Camarines Sur}
+    {Subcontract • Lead Full-Stack Developer (C\#, .NET Framework, MSSQL)}{Pili, Camarines Sur}
     \resumeItemListStart
-        \resumeItem{Developed a weather monitoring system by processing and storing large number of datasets from a local API weather data.}
-        \resumeItem{Optimized the API fetching process to achieve 80\% efficiency, which improved the rendering of pin markers on the map view, reduced the load time of pages, and enhanced data processing for the filter page.}
-        \resumeItem{Created a background service built using C\# WinForms for fetching and storing 10,000+ records per day of real-time weather data per station into the database.}
+        \resumeItem{Developed a weather monitoring system; processing and storing large datasets from a government local weather API.}
+        \resumeItem{Created a background service built using C\# WinForms for fetching and storing \textbf{10,000+ records per day} of real-time weather data per station into the database.}
         \resumeItem{Implemented SMTP and enforced backend security for handling RESTful API requests, preventing server overload.}
-        \resumeItem{Implemented, wrote, and designed a secure API, UI/UX of the application, data processing, and database configuration.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
