--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -5,30 +5,23 @@
     {aiProof}{Mar 2024 -- May 2024}
     {Mobile Developer}{Flutter, Dart, Firebase}
     \resumeItemListStart
-        \resumeItem{Lead project manager of a two-person project. Conducted KANBAN and SCRUM meetings for the group.}
-        \resumeItem{Developed core features of the applications e.g., OCR, statistics, and home page.}
-        \resumeItem{Configured and setup back-end requirements for the Rapid API Integration for AI proofing.}
-        \resumeItem{UI/UX Engineer responsible for developing responsive and custom made design for an overall user experience.}
+        \resumeItem{Lead project manager of a two-person project. Conducted KANBAN and meetings for the group.}
+        \resumeItem{Implemented OCR to extract text from images for use in AI processing.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Dadsbol}{Apr 2024 -- May 2024}
     {Lead Game Programmer}{Unity, C\#}
     \resumeItemListStart
-        \resumeItem{Lead the development of the game; a physics-based 3D ragdoll power dodgeball game. that allowed the team to stay on track of the short deadline. Developed the game's core mechanics and gameplay; Designed the game's UI/UX.}
-        \resumeItem{Developed the game's AI and enforced project architecture through simulation tick-based event system that allowed for clean modularized code.}
-        \resumeItem{Utilized version control and project management tools such as Trello and Github for efficient collaboration and tracking of project progress along with conducting SCRUM meetings for the team.}
-        \resumeItem{Collaborated with cross-functional teams to gather requirements, work on strengths, and ensure smooth integration and development for the game.}
+        \resumeItem{Led the development of the game, a physics-based 3D ragdoll power dodgeball game that allowed the team to stay on track for the short deadline. I developed the game's core mechanics and gameplay and designed its UI/UX.}
+        \resumeItem{Developed the game's AI and enforced project architecture through a simulation tick-based event system that allowed for clean modularized code.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {STUBU.AI}{Oct 2023 -- Apr 2024}
     {Lead Frontend Web Developer}{React, TailwindCSS, Typescript, NodeJS, MongoDB, ExpressJS}
     \resumeItemListStart
-        \resumeItem{Assisted on UI/UX Design and made improvements to user experience (UX).}
-        \resumeItem{Lead the project management for the front-end team consisting of four (4) developers and conducted SCRUM meetings for the group.}
-        \resumeItem{Utilized version control and project management tools such as ClickUp and Github for efficient collaboration and tracking of project progress.}
-        \resumeItem{Conducted code reviews to the team developers and provided technical documentations upon submission for Appcon 2023.}
+        \resumeItem{An LLM-powered web application utilizing retrieval augmented generation (RAG) to generate personalized lessons and assessments for learners. Led the project management for the frontend team and conducted SCRUM meetings.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
@@ -36,7 +29,7 @@
     {Mobile Developer}{Flutter, Dart, Firebase}
     \resumeItemListStart
         \resumeItem{Lead project manager of the project. Conducted KANBAN and SCRUM meetings for the group.}
-        \resumeItem{Developed core features of the application e.g., management system, authentication, and back-end configuration to google services -- firebase, firestore, and firebase authentication.}
-        \resumeItem{UI/UX engineer responsible for developing responsive and custom made design for an overall user experience.}
+        \resumeItem{Developed core features of the application e.g., management system, authentication, and back-end configuration to Google services -- Firebase, Firestore, and Firebase authentication.}
+        \resumeItem{UI/UX engineer responsible for developing responsive and custom designs for an overall user experience.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
