--- a/sections/references.tex
+++ b/sections/references.tex
@@ -1,11 +1,9 @@
 \section{References}
 
-\begin{multicols}{2}
-\raggedcolumns
 \resumeSubHeadingListStart
     \resumeSubheading
-    {Joshua C. Martinez, MIT}{}
-    {Chief Information Technology Officer}{}
+    {Joshua C. Martinez, MIT}{Ateneo de Naga University}
+    {Chief Information Technology Officer}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Direct Line: +(63).54.881.4128}
         \resumeItem{Email: joshuamartinez@gbox.adnu.edu.ph}
@@ -13,8 +11,8 @@
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
-    {Prof. Estrella H. Montealegre}{}
-    {Management Information Systems, Director}{}
+    {Prof. Estrella H. Montealegre}{Ateneo de Naga University}
+    {Management Information Systems, Director}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Phone: +(63) 918-926-6712}
         \resumeItem{Email: emontealegre@gbox.adnu.edu.ph}
@@ -23,7 +21,7 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ryan Jay D. Rosano}{Ateneo de Naga University}
-    {Information System Administrator}{}
+    {Information System Administrator}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Phone: +(63) 921-990-9207}
         \resumeItem{Email: rrosano@gbox.adnu.edu.ph}
@@ -31,11 +29,10 @@
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
-    {Andrew Coros}{Freelancer}
-    {Freelance Full-Stack Web Developer}{}
+    {Andrew Coros}{Freelance}
+    {Full-Stack Web Developer}{San Fernando, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Phone: +(63) 916-560-3013}
         \resumeItem{Email: corosdrew11@gmail.com}
     \resumeItemListEnd
-\resumeSubHeadingListEnd
-\end{multicols}
+    \resumeSubHeadingListEnd
