chore: updated resume.

--- a/resume/latest/sections/experience.tex
+++ b/resume/latest/sections/experience.tex
@@ -14,7 +14,7 @@
     {Ateneo de Naga University -- Project RETSU}{Jan 2024 -- Mar 2024}
     {Contract • Lead Application Developer  (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
     \resumeItemListStart
-        \resumeItem{Developed a queue management system solution for the University, which enhanced the user experience by reducing queue delays and eliminating the inconveniences associated with traditional queuing systems in AdNU.}
+        \resumeItem{Developed a digital queue management solution that processed 200-700+ daily requests enhancing operational efficiency while minimizing average wait times for clients and  eliminating the inconveniences associated with traditional queuing.}
         \resumeItem{Integrated online queueing for students with QR access and a real-time queue status view for clients with customizable controls through admin management.}
         \resumeItem{Solved complex real-time bugs and optimized frontend, backend, and database by improving SQL queries and data handling, increasing system efficiency by 84\%, enabling seamless page loads with \textbf{26,000+} transactions per branch.}
     \resumeItemListEnd
