--- a/cv.tex
+++ b/cv.tex
@@ -60,10 +60,10 @@
 % The sections are imported using the \input command.
 
 \input{resume/latest/sections/heading}         % Import the heading section
-\input{sections/education}                     % Import the education section
 \input{resume/latest/sections/skills}          % Import the skills. section
-\input{resume/latest/sections/experience}      % Import the experience section
+\input{sections/experience}                    % Import the experience section
 \input{sections/projects}                      % Import the projects section
+\input{sections/education}                     % Import the education section
 \input{sections/achievements}                  % Import the achievements section
 \input{sections/certification}                 % Import the certification section
 \input{sections/references.tex}                % Import the education section
