fix: corrected dates.

--- a/cv.tex
+++ b/cv.tex
@@ -63,7 +63,7 @@
 \input{resume/latest/sections/skills}          % Import the skills. section
 \input{sections/experience}                    % Import the experience section
 \input{sections/projects}                      % Import the projects section
-\input{sections/education}                     % Import the education section
+\input{resume/latest/sections/education}       % Import the education section
 \input{sections/achievements}                  % Import the achievements section
 \input{sections/certification}                 % Import the certification section
 \input{sections/references.tex}                % Import the education section
