chore: updated cv.

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -9,6 +9,7 @@
         \resumeItem{Crafted and applied a data migration plan to perform a \textbf{large-scale migration of up to 3,000,000+ records} from MySQL and Postgres to Oracle with a \textbf{99.82\% success rate}, resulting in unified data records.}
         \resumeItem{Enforced clean architecture to the project with advanced OOP concepts. Wrote clear technical and project documentation, i.e., ERD, user manual, Gantt chart,  swimlane, data dictionary, and code documentation.}
     \resumeItemListEnd
+
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ateneo de Naga University -- Project RETSU}{Jan 2024 -- Mar 2024}
@@ -17,6 +18,13 @@
         \resumeItem{Developed a digital queue management solution that processed 200-700+ daily requests enhancing operational efficiency while minimizing average wait times for clients and  eliminating the inconveniences associated with traditional queuing.}
         \resumeItem{Integrated online queueing for students with QR access and a real-time queue status view for clients with customizable controls through admin management.}
         \resumeItem{Solved complex real-time bugs and optimized frontend, backend, and database by improving SQL queries and data handling, increasing system efficiency by 84\%, enabling seamless page loads with \textbf{26,000+} transactions per branch.}
+    \resumeItemListEnd
+    % ------------------------------------------------------------------------------------------ %
+    \resumeSubheading
+    {Ateneo de Naga University -- Management Information System (MIS)}{Aug 2023 -- Present}
+    {Internship • Junior Appliation Developer}{Naga City, Camarines Sur}
+    \resumeItemListStart
+        \resumeItem{Contributed to the development life cycle, creation of conceptual database design using ERD, and engineered UI/UX prototypes in Figma for new systems within the University to streamline operations and eliminate project roadblocks.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
