--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -13,7 +13,7 @@
     {Dadsbol}{Apr 2024 -- May 2024}
     {Lead Game Programmer}{Unity, C\#}
     \resumeItemListStart
-        \resumeItem{Led the development of the game, a physics-based 3D ragdoll power dodgeball game that allowed the team to stay on track for the short deadline. I developed the game's core mechanics and gameplay and designed its UI/UX.}
+        \resumeItem{Led the development of the game, a physics-based 3D ragdoll power dodgeball game that allowed the team to stay on track for the short deadline. Developed the game's core mechanics and gameplay and UI assets.}
         \resumeItem{Developed the game's AI and enforced project architecture through a simulation tick-based event system that allowed for clean modularized code.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
@@ -28,8 +28,8 @@
     {eBayan}{Sept 2023 -- Dec 2023}
     {Mobile Developer}{Flutter, Dart, Firebase}
     \resumeItemListStart
-        \resumeItem{Lead project manager of the project. Conducted KANBAN and SCRUM meetings for the group.}
-        \resumeItem{Developed core features of the application e.g., management system, authentication, and back-end configuration to Google services -- Firebase, Firestore, and Firebase authentication.}
+        \resumeItem{Lead project manager of the project. Applied KANBAN and SCRUM meetings for the group.}
+        \resumeItem{Developed core features of the application i.e., management system, authentication, and back-end configuration to Google services -- Firebase, Firestore, and Firebase authentication.}
         \resumeItem{UI/UX engineer responsible for developing responsive and custom designs for an overall user experience.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
