chore: updated cv.

--- a/cv.tex
+++ b/cv.tex
@@ -66,6 +66,6 @@
 \input{resume/latest/sections/education}       % Import the education section
 \input{sections/achievements}                  % Import the achievements section
 \input{sections/certification}                 % Import the certification section
-\input{sections/references.tex}                % Import the education section
+% \input{sections/references.tex}                % Import the education section
 
 \end{document}
