--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -2,7 +2,16 @@
 
 \resumeSubHeadingListStart
     \resumeSubheading
-    {Ateneo de Naga University -- Project HRIS \& ADNUONE (Phase 1 and 2)}{Jun 2024 -- Present}
+    {Ateneo de Naga University -- Project HRIS \& ADNUONE (Phase 2)}{February 2025 -- Present}
+    {Contract • Lead Backend Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    \resumeItemListStart
+        \resumeItem{Designed the conceptual database schema in Oracle using ERD capable of handling different edge cases within the complexity of the business process in the University.}
+        \resumeItem{Assisted as the project manager for the development team, implementing clean Laravel architecture and building core ERP components—specifically the HRIS and ADNUONE employee portal system.}
+    \resumeItemListEnd
+
+    % ------------------------------------------------------------------------------------------ %
+    \resumeSubheading
+    {Ateneo de Naga University -- Project HRIS (Phase 1)}{Jun 2024 -- Jan 2025}
     {Contract • Lead Application \& Backend Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Designed the conceptual database schema in Oracle using ERD and optimized data rendering of thousands of records by PL/SQL queries, views, procedures, indexing, functions, SSR and CSR.}
@@ -22,7 +31,7 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ateneo de Naga University -- Management Information System (MIS)}{Aug 2023 -- Present}
-    {Internship • Junior Appliation Developer}{Naga City, Camarines Sur}
+    {Internship • Junior Application Developer}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Contributed to the development life cycle, creation of conceptual database design using ERD, and engineered UI/UX prototypes in Figma for new systems within the University to streamline operations and eliminate project roadblocks.}
     \resumeItemListEnd
