fix: corrected terms.

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -12,7 +12,7 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ateneo de Naga University -- Project HRIS (Phase 1)}{Jun 2024 -- Jan 2025}
-    {Contract • Lead Application \& Backend Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    {Contract • Lead Application Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Designed the conceptual database schema in Oracle using ERD and optimized data rendering of thousands of records by PL/SQL queries, views, procedures, indexing, functions, SSR and CSR.}
         \resumeItem{Crafted and applied a data migration plan to perform a \textbf{large-scale migration of up to 3,000,000+ records} from MySQL and Postgres to Oracle with a \textbf{99.82\% success rate}, resulting in unified data records.}
