chore: updated resume and cv.

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -3,7 +3,7 @@
 \resumeSubHeadingListStart
     \resumeSubheading
     {aiProof}{Mar 2024 -- May 2024}
-    {Mobile Developer}{Flutter, Dart, Firebase}
+    {Mobile Developer (Flutter, Dart, Firebase)}{}
     \resumeItemListStart
         \resumeItem{Lead project manager of a two-person project. Conducted KANBAN and meetings for the group.}
         \resumeItem{Implemented OCR to extract text from images for use in AI processing.}
@@ -11,7 +11,7 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Dadsbol}{Apr 2024 -- May 2024}
-    {Lead Game Programmer}{Unity, C\#}
+    {Lead Game Programmer (Unity, C\#)}{}
     \resumeItemListStart
         \resumeItem{Led the development of the game, a physics-based 3D ragdoll power dodgeball game that allowed the team to stay on track for the short deadline. Developed the game's core mechanics and gameplay and UI assets.}
         \resumeItem{Developed the game's AI and enforced project architecture through a simulation tick-based event system that allowed for clean modularized code.}
@@ -19,14 +19,14 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {STUBU.AI}{Oct 2023 -- Apr 2024}
-    {Lead Frontend Web Developer}{React, TailwindCSS, Typescript, NodeJS, MongoDB, ExpressJS}
+    {Lead Frontend Web Developer (React, TailwindCSS, Typescript, NodeJS, MongoDB, ExpressJS)}{}
     \resumeItemListStart
         \resumeItem{An LLM-powered web application utilizing retrieval augmented generation (RAG) to generate personalized lessons and assessments for learners. Led the project management for the frontend team and conducted SCRUM meetings.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {eBayan}{Sept 2023 -- Dec 2023}
-    {Mobile Developer}{Flutter, Dart, Firebase}
+    {Mobile Developer (Flutter, Dart, Firebase)}{}
     \resumeItemListStart
         \resumeItem{Lead project manager of the project. Applied KANBAN and SCRUM meetings for the group.}
         \resumeItem{Developed core features of the application i.e., management system, authentication, and back-end configuration to Google services -- Firebase, Firestore, and Firebase authentication.}
