--- a/resume/latest/sections/experience.tex
+++ b/resume/latest/sections/experience.tex
@@ -3,7 +3,7 @@
 \resumeSubHeadingListStart
     \resumeSubheading
     {Ateneo de Naga University -- Project HRIS \& ADNUONE (Phase 1 and 2)}{Jun 2024 -- Present}
-    {Contract • Lead Application \& Backend Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    {Contract • Application/Backend Developer (PHP, Laravel, Oracle, Node.js, TailwindCSS)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Designed the conceptual database schema in Oracle using ERD and optimized data rendering of thousands of records by PL/SQL queries, views, procedures, indexing, functions, SSR and CSR.}
         \resumeItem{Crafted and applied a data migration plan to perform a \textbf{large-scale migration of up to 3,000,000+ records} from MySQL and Postgres to Oracle with a \textbf{99.82\% success rate}, resulting in unified data records.}
@@ -12,7 +12,7 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ateneo de Naga University -- Project RETSU}{Jan 2024 -- Mar 2024}
-    {Contract • Lead Application Developer  (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    {Contract • Lead Application Developer  (PHP, Laravel, Oracle, Node.js, TailwindCSS)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Developed a digital queue management solution that processed 200-700+ daily requests enhancing operational efficiency while minimizing average wait times for clients and  eliminating the inconveniences associated with traditional queuing.}
         \resumeItem{Integrated online queueing for students with QR access and a real-time queue status view for clients with customizable controls through admin management.}
@@ -22,7 +22,7 @@
     % 
     \resumeSubheading
     {Department of Agriculture -- Project DAAMIA}{Sep 2022 -- Oct 2023}
-    {Subcontract • Lead Full-Stack Developer (C\#, .NET Framework, MSSQL)}{Pili, Camarines Sur}
+    {Subcontract • Full-Stack Developer (C\#, .NET Framework, MSSQL)}{Pili, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Developed a weather monitoring system; processing and storing large datasets from a government local weather API.}
         \resumeItem{Created a background service built using C\# WinForms for fetching and storing \textbf{10,000+ records per day} of real-time weather data per station into the database.}
