--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -3,16 +3,17 @@
 \resumeSubHeadingListStart
     \resumeSubheading
     {Ateneo de Naga University -- Project HRIS \& ADNUONE (Phase 2)}{February 2025 -- Present}
-    {Contract • Lead Backend Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    {Contract • Application/Backend Developer (PHP, Laravel, Oracle, Node.js, TailwindCSS)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Designed the conceptual database schema in Oracle using ERD capable of handling different edge cases within the complexity of the business process in the University.}
+        \resumeItem{Wrote secure RESTful endpoints for the frontend team and provided documentation using the OpenAPI (Swagger) Documentation Generator — Scramble de:doc.}
         \resumeItem{Assisted as the project manager for the development team, implementing clean Laravel architecture and building core ERP components—specifically the HRIS and ADNUONE employee portal system.}
     \resumeItemListEnd
 
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ateneo de Naga University -- Project HRIS (Phase 1)}{Jun 2024 -- Jan 2025}
-    {Contract • Lead Application Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    {Contract • Application Developer (PHP, Laravel, Oracle, Node.js, TailwindCSS)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Designed the conceptual database schema in Oracle using ERD and optimized data rendering of thousands of records by PL/SQL queries, views, procedures, indexing, functions, SSR and CSR.}
         \resumeItem{Crafted and applied a data migration plan to perform a \textbf{large-scale migration of up to 3,000,000+ records} from MySQL and Postgres to Oracle with a \textbf{99.82\% success rate}, resulting in unified data records.}
@@ -22,7 +23,7 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ateneo de Naga University -- Project RETSU}{Jan 2024 -- Mar 2024}
-    {Contract • Lead Application Developer  (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    {Contract • Lead Application Developer (PHP, Laravel, Oracle, Node.js, TailwindCSS)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Developed a digital queue management solution that processed 200-700+ daily requests enhancing operational efficiency while minimizing average wait times for clients and  eliminating the inconveniences associated with traditional queuing.}
         \resumeItem{Integrated online queueing for students with QR access and a real-time queue status view for clients with customizable controls through admin management.}
@@ -38,7 +39,7 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Department of Agriculture -- Project DAAMIA}{Sep 2022 -- Oct 2023}
-    {Subcontract • Lead Full-Stack Developer (C\#, .NET Framework, MSSQL)}{Pili, Camarines Sur}
+    {Subcontract • Full-Stack Developer (C\#, .NET Framework, MSSQL)}{Pili, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Developed a weather monitoring system; processing and storing large datasets from a government local weather API.}
         \resumeItem{Created a background service built using C\# WinForms for fetching and storing \textbf{10,000+ records per day} of real-time weather data per station into the database.}
@@ -47,7 +48,7 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {JubDesk}{May 2022 -- Aug 2022}
-    {Subcontract • Full-Stack Web Developer}{Australia}
+    {Subcontract • Associate Web Developer}{Australia}
     \resumeItemListStart
         \resumeItem{Developed new features resulting in workflow efficiency in the company’s HR management system.}
         \resumeItem{Troubleshooted and fixed major issues in the system, which enabled the company to export detailed reports on its HR system with efficiency.}
