chore: updated dates.

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -27,11 +27,11 @@
     \resumeItemListStart
         \resumeItem{Developed a digital queue management solution that processed 200-700+ daily requests enhancing operational efficiency while minimizing average wait times for clients and  eliminating the inconveniences associated with traditional queuing.}
         \resumeItem{Integrated online queueing for students with QR access and a real-time queue status view for clients with customizable controls through admin management.}
-        \resumeItem{Solved complex real-time bugs and optimized frontend, backend, and database by improving SQL queries and data handling, increasing system efficiency by 84\%, enabling seamless page loads with \textbf{26,000+} transactions per branch.}
+        \resumeItem{Solved complex real-time bugs and optimized frontend, backend, and database by improving SQL queries and data handling, increasing system efficiency by 84\%, enabling seamless page loads with \textbf{69,000+} transactions per branch.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
-    {Ateneo de Naga University -- Management Information System (MIS)}{Aug 2023 -- Present}
+    {Ateneo de Naga University -- Management Information System (MIS)}{Aug 2023 -- May 2025}
     {Internship • Junior Application Developer}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Contributed to the development life cycle, creation of conceptual database design using ERD, and engineered UI/UX prototypes in Figma for new systems within the University to streamline operations and eliminate project roadblocks.}
