chore: updated cv and resume.

--- a/resume/latest/sections/skills.tex
+++ b/resume/latest/sections/skills.tex
@@ -2,7 +2,7 @@
 
 \begin{itemize}[itemsep=1pt, parsep=0pt, topsep=0pt]
     \item Programming Languages: C\#, PHP, HTML/CSS/Sass, Dart, JavaScript, TypeScript.
-    \item Framework and Libraries: ASP.NET, Laravel, Node.js, Express.js, React, Next.js, Flutter, Unity, jQuery, TailwindCSS.
+    \item Framework and Libraries: ASP.NET, Laravel, Node.js, Express.js, React, Next.js, Flutter, jQuery, TailwindCSS.
     \item Database: MSSQL, Oracle, Redis, SQL, PL/SQL.
     \item Cloud, DevOps, \& Tools: Google Cloud, Digital Ocean, Firebase, Figma, Git, GitHub Actions, Docker (CI/CD).
 \end{itemize}
