chore: updated resume and cv.

--- a/resume/latest/sections/education.tex
+++ b/resume/latest/sections/education.tex
@@ -5,7 +5,7 @@
     {Ateneo de Naga University -- Cum Laude}{Expected June 2025}
     {Bachelor of Science in Information Technology (QPI: 3.44 / 4.00)}{Naga City, Camarines Sur}
     \resumeItemListStart
-        \resumeItem{Junior Application Developer at Ateneo de Naga University Management Information System (MIS) Department.}
+        \resumeItem{Junior Application Developer at Ateneo de Naga University Management Information System (MIS) Office.}
         \resumeItem{Member of the Ateneo de Naga University CSGUILD -- Computer Studies Guild for United Innovation, Learning \& Development.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
