fix: corrected date.

--- a/resume/latest/sections/education.tex
+++ b/resume/latest/sections/education.tex
@@ -2,7 +2,7 @@
 
 \resumeSubHeadingListStart
     \resumeSubheading
-    {Ateneo de Naga University}{Expected June 2025}
+    {Ateneo de Naga University}{Aug 2021 -- June 2025}
     {Bachelor of Science in Information Technology -- \textbf{Cum Laude} (QPI: 3.44 / 4.00)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Junior Application Developer at Ateneo de Naga University Management Information System (MIS) Office.}
